Minor notebook changes.

--- a/notebooks/nb_92_Data_Collection.ipynb
+++ b/notebooks/nb_92_Data_Collection.ipynb
@@ -246,7 +246,7 @@
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import RenderMode, register_grid_envs\n",
     "from training_rl.offline_rl.offline_policies.offpolicy_rendering import \\\n",
     "    offpolicy_rendering\n",
-    "from training_rl.offline_rl.utils import load_buffer_minari, state_action_histogram\n",
+    "from training_rl.offline_rl.utils import load_buffer_minari\n",
     "from training_rl.offline_rl.visualizations.utils import get_state_action_data_and_policy_grid_distributions, snapshot_env\n",
     "from training_rl.offline_rl.utils import widget_list\n",
     "from training_rl.offline_rl.behavior_policies.behavior_policy_registry import BehaviorPolicyType\n",
@@ -328,7 +328,7 @@
     "\n",
     "# obstacles to be used with the 2d grid-world\n",
     "grid_world_obstacles = [\n",
-    "    ObstacleTypes.door_object_8x8,\n",
+    "    ObstacleTypes.obstacle_8x8_top_right,\n",
     "    ObstacleTypes.obst_free_8x8, \n",
     "]\n",
     "\n",
@@ -491,9 +491,8 @@
    "source": [
     "# Compute state-action data distribution\n",
     "if isinstance(env.unwrapped, Custom2DGridEnv):\n",
+    "    \n",
     "    state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
-    "    new_keys = [(env.to_xy(state_action[0]), state_action[1]) for state_action in list(state_action_count_data.keys())]\n",
-    "    state_action_histogram(state_action_count_data, title=\"State-Action data distribution\")\n",
     "    snapshot_env(env)\n",
     "else:\n",
     "    raise ValueError(f\"To analyze the data the environment should be of type {Custom2DGridEnv}.\")"
