--- a/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
+++ b/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
@@ -253,7 +253,6 @@
     "from training_rl.offline_rl.offline_trainings.policy_config_data_class import (\n",
     "    TrainedPolicyConfig, get_trained_policy_path)\n",
     "from training_rl.offline_rl.offline_trainings.restore_policy_model import restore_trained_offline_policy\n",
-    "from training_rl.offline_rl.utils import compare_state_action_histograms, state_action_histogram\n",
     "from training_rl.offline_rl.visualizations.utils import get_state_action_data_and_policy_grid_distributions, snapshot_env\n",
     "from training_rl.offline_rl.utils import load_buffer_minari, widget_list\n",
     "\n",
@@ -498,8 +497,6 @@
     "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.3))\n",
-    "\n",
     "snapshot_env(env)"
    ]
   },
@@ -633,13 +630,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "outputs": [],
    "source": [
-    "NUM_EPISODES = 100 # as more episodes the better\n",
+    "NUM_EPISODES = 10 # as more episodes the better\n",
     "\n",
     "# compute statistics\n",
     "state_action_count_data, state_action_count_policy = \\\n",
@@ -651,10 +649,6 @@
     "    logits_sampling=True,\n",
     ")\n",
     "\n",
-    "# plots\n",
-    "state_action_histogram(state_action_count_data)\n",
-    "state_action_histogram(state_action_count_policy)\n",
-    "compare_state_action_histograms(state_action_count_data, state_action_count_policy)\n",
     "snapshot_env(env)"
    ]
   },
