--- a/notebooks/nb_96_Offline_rl_exercises.ipynb
+++ b/notebooks/nb_96_Offline_rl_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:27.996795Z",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:29.266823Z",
@@ -194,7 +194,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:29.481414Z",
@@ -287,7 +287,7 @@
     "from training_rl.offline_rl.utils import widget_list\n",
     "from training_rl.offline_rl.visualizations.utils import (\n",
     "    get_state_action_data_and_policy_grid_distributions, snapshot_env)\n",
-    "from training_rl.offline_rl.utils import load_buffer_minari, state_action_histogram\n",
+    "from training_rl.offline_rl.utils import load_buffer_minari\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import MinariDatasetConfig\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -558,10 +558,6 @@
     "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
-    "new_keys = [(env.to_xy(state_action[0]), state_action[1]) for state_action in list(state_action_count_data.keys())]\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.01),\n",
-    "                        new_keys_for_state_action_count_plot=new_keys)\n",
-    "\n",
     "snapshot_env(env)"
    ]
   },
@@ -986,8 +982,6 @@
     "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
-    "new_keys = [(env.to_xy(state_action[0]), state_action[1]) for state_action in list(state_action_count_data.keys())]\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.03), new_keys_for_state_action_count_plot=new_keys)\n",
     "\n",
     "if \"start_0_0\" in selected_data_set.value:\n",
     "    env.set_starting_point((0,0))\n",
@@ -1378,8 +1372,9 @@
    },
    "outputs": [],
    "source": [
-    "from training_rl.offline_rl.visualizations.utils import collect_data_from_rollout_torcs_policy\n",
     "NUM_STEPS_ROLLOUT = 5000 \n",
+    "\n",
+    "\n",
     "bcq_driver = collect_data_from_rollout_torcs_policy(\n",
     "    env_collected_quantity='angle',\n",
     "    driver_policy=trained_bcq_policy,\n",
