Minor changes and nb_96 last exercise finished.

--- a/notebooks/nb_96_Offline_rl_exercises.ipynb
+++ b/notebooks/nb_96_Offline_rl_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:27.996795Z",
@@ -21,228 +21,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:29.266823Z",
      "start_time": "2024-05-09T19:53:29.254411Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>/*\n",
-       "This file is mainly copy-pasta from rise's examples\n",
-       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
-       "that was further customized for appliedAI purposes\n",
-       "*/\n",
-       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
-       "\n",
-       "\n",
-       "/*\n",
-       "body {\n",
-       "    font-family: 'Work Sans', sans-serif !important;\n",
-       "    text-transform: initial !important;\n",
-       "    letter-spacing: initial !important;\n",
-       "    font-weight: 400 !important;\n",
-       "    line-height: 1.5 !important;\n",
-       "    text-size-adjust: 100% !important;\n",
-       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
-       "}\n",
-       "\n",
-       "\n",
-       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
-       "    font-size: 1.5rem !important;\n",
-       "}\n",
-       "*/\n",
-       "\n",
-       ".navbar-default .navbar-nav > li > a {\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       ".filename {\n",
-       "    font-size: 2.4rem !important;\n",
-       "    color: #212529 !important;\n",
-       "    font-weight: 600 !important;\n",
-       "}\n",
-       "\n",
-       ".reveal, .md-slide {\n",
-       "    color: white !important;\n",
-       "}\n",
-       "\n",
-       "h1, h2 {\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "h3, h4, h5, h6 {\n",
-       "    color: #808080 !important;\n",
-       "}\n",
-       "\n",
-       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
-       "div.text_cell_render {\n",
-       "    color: #212529 !important;\n",
-       "}\n",
-       "\n",
-       "/*copied from stackoverflow, better spacing between list items*/\n",
-       "li + li {\n",
-       "  margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
-       "    margin-left: 0.1em;\n",
-       "    margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       ".reveal .rendered_html h1:first-child,\n",
-       ".reveal .rendered_html h2:first-child,\n",
-       ".reveal .rendered_html h3:first-child,\n",
-       ".reveal .rendered_html h4:first-child,\n",
-       ".reveal .rendered_html h5:first-child {\n",
-       "    margin-top: 0.2em;\n",
-       "}\n",
-       "\n",
-       "/*\n",
-       ".CodeMirror-lines, .output_text {\n",
-       "    font-size: 1.5rem !important;\n",
-       "}\n",
-       "*/\n",
-       "\n",
-       "h1.plan, h2.plan, h3.plan {\n",
-       "    text-align: center;\n",
-       "    padding-bottom: 30px;\n",
-       "}\n",
-       "\n",
-       "ul.plan>li>span.plan-bold {\n",
-       "    font-size: 110%;\n",
-       "    padding: 4px;\n",
-       "    font-weight: bold;\n",
-       "    background-color: #eee;\n",
-       "}\n",
-       "\n",
-       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       "\n",
-       ".plan-strike {\n",
-       "    opacity: 0.4;\n",
-       "/*    text-decoration: line-through; */\n",
-       "}\n",
-       "\n",
-       "div.plan-container {\n",
-       "    display: grid;\n",
-       "    grid-template-columns: 50% 50%;\n",
-       "}\n",
-       "\n",
-       "/*\n",
-       " * this is to void xarray's html output to show the fallback textual representation\n",
-       " * see also\n",
-       "   * xarray.md and\n",
-       "   * https://github.com/damianavila/RISE/issues/594\n",
-       " */\n",
-       ".reveal pre.xr-text-repr-fallback {\n",
-       "    display: none;\n",
-       "}\n",
-       "\n",
-       "#toc-header, .toc-item li {\n",
-       "    margin: auto !important;\n",
-       "    color: #808080 !important;\n",
-       "}\n",
-       "\n",
-       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
-       "    margin: auto !important;\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "#toc-wrapper {\n",
-       "    top: auto !important;\n",
-       "    bottom: auto !important;\n",
-       "    margin-top: 2rem !important;\n",
-       "    color: #00747b !important;\n",
-       "}\n",
-       "\n",
-       "\n",
-       "#rise-header {\n",
-       "    margin: 10px;\n",
-       "    left: 5%;\n",
-       "}\n",
-       "\n",
-       "#rise-footer {\n",
-       "    margin: 10px;\n",
-       "    right: 5%;\n",
-       "}\n",
-       "\n",
-       "#rise-backimage {\n",
-       "    opacity: 0.70;\n",
-       "}\n",
-       "\n",
-       ".reveal img {\n",
-       "    max-width: 100%;\n",
-       "}\n",
-       "\n",
-       "\n",
-       ".md-slide.title {\n",
-       "    position: relative;\n",
-       "    top: -50%;\n",
-       "    margin-left: 5%;\n",
-       "    font-size: 4em !important;\n",
-       "    line-height: 1.6;\n",
-       "}\n",
-       "</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%presentation_style"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:29.481414Z",
      "start_time": "2024-05-09T19:53:29.471813Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
-       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
-       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
-       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
-       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
-       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
-       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
-       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
-       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
-       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_latex_macros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-09T19:53:29.780063Z",
@@ -272,6 +79,8 @@
     "import gymnasium as gym\n",
     "import torch\n",
     "import warnings\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "from training_rl.offline_rl.behavior_policies.behavior_policy_registry import BehaviorPolicyType\n",
     "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import ObstacleTypes\n",
@@ -289,6 +98,7 @@
     "    get_state_action_data_and_policy_grid_distributions, snapshot_env)\n",
     "from training_rl.offline_rl.utils import load_buffer_minari\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import MinariDatasetConfig\n",
+    "from training_rl.offline_rl.visualizations.utils import policy_rollout_torcs_env, compare_policy_decisions_vs_expert_suggestions\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "register_grid_envs()\n",
@@ -1315,7 +1125,7 @@
    },
    "outputs": [],
    "source": [
-    "trained_policy_selected = widget_list([\"policy_best_reward.pth\", TRAINED_POLICY_NAME])"
+    "trained_policy_selected = widget_list([TRAINED_POLICY_NAME, \"policy_best_reward.pth\"])"
    ]
   },
   {
@@ -1343,7 +1153,7 @@
     "    env_or_env_name=\"torcs\",\n",
     "    render_mode=None,\n",
     "    policy_model=trained_bcq_policy,\n",
-    "    num_frames=10000,\n",
+    "    num_frames=3500,\n",
     ")"
    ]
   },
@@ -1355,7 +1165,7 @@
     }
    },
    "source": [
-    "**Analysis of results: Let's compare the expert, suboptimal and offline trained policies.** "
+    "**Analysis of results: Let's compare the actions taken by the BCQ policy against the ones that would have been taken by the expert.** "
    ]
   },
   {
@@ -1372,94 +1182,81 @@
    },
    "outputs": [],
    "source": [
-    "NUM_STEPS_ROLLOUT = 5000 \n",
+    "NUM_STEPS_ROLLOUT = 4500 \n",
     "\n",
-    "\n",
-    "bcq_driver = collect_data_from_rollout_torcs_policy(\n",
-    "    env_collected_quantity='angle',\n",
+    "output_initial_phase = policy_rollout_torcs_env(\n",
     "    driver_policy=trained_bcq_policy,\n",
-    "    num_steps=NUM_STEPS_ROLLOUT\n",
+    "    advisor_policy=BehaviorPolicyType.torcs_expert_policy,\n",
+    "    num_steps=NUM_STEPS_ROLLOUT,\n",
     ")\n",
     "\n",
-    "drunk_driver = collect_data_from_rollout_torcs_policy(\n",
-    "    env_collected_quantity='angle',\n",
-    "    driver_policy=BehaviorPolicyType.torcs_drunk_driver_policy,\n",
-    "    num_steps=NUM_STEPS_ROLLOUT\n",
-    ")\n",
-    "\n",
-    "expert_driver = collect_data_from_rollout_torcs_policy(\n",
-    "    env_collected_quantity='angle',\n",
-    "    driver_policy=BehaviorPolicyType.torcs_expert_policy,\n",
-    "    num_steps=NUM_STEPS_ROLLOUT\n",
+    "compare_policy_decisions_vs_expert_suggestions(\n",
+    "    policy_actions=output_initial_phase[\"actions_driver\"],\n",
+    "    expert_suggestions=output_initial_phase[\"actions_advisor\"],\n",
+    "    \n",
     ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "def plot_multiple_lines(expert_data, bcq_data, drunk_data, obs_name=\"actions_driver\"):\n",
-    "    x = range(len(expert_data[obs_name]))\n",
-    "    plt.plot(x, expert_data[obs_name], label='Expert Driver')\n",
-    "    plt.plot(x, bcq_data[obs_name], label='BCQ Driver')\n",
-    "    plt.plot(x, drunk_data[obs_name], label='Drunk Driver')\n",
-    "    plt.xlabel('Time Steps')\n",
-    "    plt.ylabel(obs_name)\n",
-    "    plt.title(f'Comparison of Drivers {obs_name}')\n",
-    "    plt.legend()\n",
-    "    plt.show()\n",
-    "    \n",
-    "plot_multiple_lines(expert_driver, bcq_driver, drunk_driver)"
+    "As we can see, the BCQ decisions are very close to the expert ones!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's give a look to the BCQ vs data action distributions.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "lidar_value = 1\n",
-    "\n",
-    "expert_lidars_left = [lidar[lidar_value] for lidar in expert_driver[\"observations\"]]\n",
-    "bcq_lidars_left = [lidar[lidar_value] for lidar in bcq_driver[\"observations\"]]\n",
-    "drunk_lidars_left = [lidar[lidar_value] for lidar in drunk_driver[\"observations\"]]\n",
-    "\n",
-    "def hist_comparison(data_list, labels, x_title, bins=20, alpha=0.4, colors=None, y_range=None):\n",
-    "    \n",
-    "    if colors is None:\n",
-    "        colors = ['blue', 'orange','green']\n",
-    "\n",
-    "    for i, data in enumerate(data_list):\n",
-    "        plt.hist(data, bins=bins, density=True, alpha=alpha, color=colors[i], label=labels[i])\n",
-    "    \n",
-    "        plt.xlabel(x_title)\n",
-    "        plt.ylabel('Density')\n",
-    "        plt.title('Histogram Comparison')\n",
-    "        plt.legend()\n",
-    "        if y_range:\n",
-    "            plt.ylim(y_range[0], y_range[1])  # Change y-axis range here\n",
-    "    plt.show()\n",
-    "\n",
-    "    \n",
-    "data = [expert_lidars_left, bcq_lidars_left]\n",
-    "labels=[\"bcq\",\"behavior\"]\n",
-    "hist_comparison(data, labels, y_range=[0.0,10.5], x_title=\"observations\")\n",
-    "\n",
-    "data = [expert_driver[\"actions_driver\"], bcq_driver[\"actions_driver\"]]\n",
-    "labels=[\"bcq\",\"behavior\"]\n",
-    "hist_comparison(data, labels, y_range=[0.0,10.5], x_title=\"actions\")"
+    "num_bins = 60\n",
+    "actions_bcq_policy = output_initial_phase[\"actions_driver\"]\n",
+    "_ = plt.hist(actions_bcq_policy, bins=num_bins, alpha=0.5, label='bcq actions')\n",
+    "_ = plt.hist(buffer_data.act, bins=num_bins, alpha=0.5, label='expert actions')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note that BCQ goes a bit o.o.d. to find the optimal path, but it doesn't create totally different actions, as we discussed before. It basically analyzes if it can produce similar actions to the collected ones, that bring the agent towards higher rewards.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Finally, let's see which are the states corresponding to the o.o.d. actions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actions_bcq = np.array(actions_bcq_policy)\n",
+    "mask = ((actions_bcq>-0.1)&(actions_bcq<-0.05)) | ((actions_bcq>0.05)&(actions_bcq<0.1))\n",
+    "indx_ood_states = np.where(mask)[0]\n",
+    "_ = plt.hist(indx_ood_states, bins=100)\n",
+    "plt.title(\"Histogram of states where BCQ decides to go o.o.d.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**You can check that these states are the ones corresponding to the curve where the behavior policy crashed.**"
    ]
   },
   {
