Minor changes in notebooks.

--- a/notebooks/nb_90_IntroOfflineRL.ipynb
+++ b/notebooks/nb_90_IntroOfflineRL.ipynb
@@ -457,9 +457,11 @@
     }
    },
    "source": [
-    "TODO --> NEW slide here: If a data point $(s,a)$ is missing is it because it wasn't collected or because it is o.o.d. ? This situation doesn't happen in online RL.\n",
+    "<img src=\"_static/images/nb_90_missing_point.png\" alt=\"offline_rl_1\" style=\"width:100%;\">\n",
     "\n",
-    "PLOT HERE!!!!!"
+    "**When working with datasets, sometimes important data is missing, especially if it's hard for the behavioral policy to collect (left figure). A good offline RL algorithm should be able to generate this missing data, which is impossible for imitation learning.**\n",
+    "\n",
+    "**On the other hand, if the data is missing because it's outside the behavior policy's capabilities (i.e., it's truly o.o.d. data), then the algorithm should detect this and avoid generating it. There could be valid reasons why these states were excluded during data collection.**\n"
    ]
   },
   {
